Created a about and contact me page ad began work on blog page.

--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
             <div class="header">
                 <h1>Jean Photography</h1>
                 <div class="rightSide">
-                    <a href=""><img src="./images/id-badge-regular.svg" alt="">About</a>
-                    <a href=""><img src="./images/address-card-solid.svg" alt="">Contact</a>
-                    <a href=""><img src="./images/microblog.svg" alt="">Blog</a>
+                    <a href="./index.html">Home</a>
+                    <a href="./pages/about.html"><img src="./images/id-badge-regular.svg" alt="">About</a>
+                    <a href="./pages/contact.html"><img src="./images/address-card-solid.svg" alt="">Contact</a>
+                    <a href="./pages/blog.html"><img src="./images/microblog.svg" alt="">Blog</a>
                     <a href=""><img src="./images/toolbox-solid.svg" alt="">Merch</a>
                     <a href=""><img src="./images/box-open-solid.svg" alt="">Portfolio</a>
                     <a href=""><button>Request A Quote</button></a>
@@ -305,10 +306,10 @@
                     <p>scouts4life@protonmail.com</p>
                 </div>
                 <div class="item3">
-                    <a href="">Blog</a>
+                    <a href="./pages/blog.html">Blog</a>
                 </div>
                 <div class="item4">
-                    <a href="">About</a>
+                    <a href="./pages/about.html">About</a>
                 </div>
                 <div class="item5">
                     <a href="">Merch</a>
