added in additional css for the blog post. GOing to begin working on practices project to create a like button that responding by going red and a comment button that adds a new dialog box and a share button that will allow you to share the post specifically or the whole page if wanted

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -22,7 +22,37 @@
     </div>
 
     <div class="mainBody">
-        
+        <div class="blogcontent">
+            <div class="contentBoxone">
+                <div class="contentBoxtop">
+                    <div class="contentBoxleft">
+                        <img src="../images/323347866_578632720356151_3600191520437945648_n.jpg" alt="">
+                    </div>
+                    <div class="contentBoxright">
+                        <h3>Jean Kirstein</h3>
+                        <span>Photographer</span>
+                    </div>
+                </div>
+                <div class="contentBoxmiddle">
+                    <p>Lorem ipsum dolor sit amet. Vel nihil ducimus est excepturi excepturi et sapiente inventore in sequi sunt. Non molestiae molestiae id accusamus enim ut dolore omnis sit asperiores rerum eum tenetur officia. Eos Quis voluptas hic blanditiis omnis qui laborum excepturi ut velit eligendi? Non ullam nihil sed fugiat quia vel nostrum velit aut iure molestiae aut repellat veniam ea similique nostrum. </p><p>Aut dolorum eaque aut delectus maiores vel pariatur nihil ut unde esse est fugit sunt 33 nemo enim. Aut itaque culpa 33 recusandae dolorum qui cupiditate earum! Et rerum delectus nam doloremque rerum eum ipsa odio id dignissimos sint id earum provident et sunt tempora ut veritatis aliquam. </p><p>Est dignissimos esse eos reprehenderit beatae cum consequatur unde. Est dolores dolores sed unde dolor hic vero minus et iste provident et architecto rerum. Eos nulla quia in nostrum quia sit repellat officia. Rem ullam enim et suscipit laborum aut veniam dicta et fuga omnis non dolores quae! </p>
+
+                </div>
+                <div class="contentBoxBottom">
+                    <div class="contentBoxcolumns">
+                        <h4>Like</h4>
+                        <img class="heart" src="../images/icons8-heart-50.png" alt="">
+                    </div>
+                    <div class="contentBoxcolumns">
+                        <h4>Share</h4>
+                        <img src="../images/icons8-share-24.png" alt="">
+                    </div>
+                    <div class="contentBoxcolumns">
+                        <h4>Comment</h4>
+                        <img src="../images/icons8-comments-50.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
 
