--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <a href="./pages/about.html"><img src="./images/id-badge-regular.svg" alt="">About</a>
                     <a href="./pages/contact.html"><img src="./images/address-card-solid.svg" alt="">Contact</a>
                     <a href="./pages/blog.html"><img src="./images/microblog.svg" alt="">Blog</a>
-                    <a href=""><img src="./images/toolbox-solid.svg" alt="">Merch</a>
+                    <a href="/pages/merch.html"><img src="./images/toolbox-solid.svg" alt="">Merch</a>
                     <a href=""><img src="./images/box-open-solid.svg" alt="">Portfolio</a>
                     <a href=""><button>Request A Quote</button></a>
                 </div>
@@ -312,7 +312,7 @@
                     <a href="./pages/about.html">About</a>
                 </div>
                 <div class="item5">
-                    <a href="">Merch</a>
+                    <a href="/pages/merch.html">Merch</a>
                 </div>
                 <div class="item6">
                     <a href="">Portfolio</a>
