Created merch page with a chekc back soon title and started on the portfolio page

--- a/pages/merch.html
+++ b/pages/merch.html
@@ -22,7 +22,9 @@
     </div>
 
     <div class="mainBody">
-        
+        <div class="merchText">
+            <H1>Coming soon. Please check back in the future ... </H1>
+        </div>
     </div>
 
 
