--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
@@ -22,6 +22,25 @@
     </div>
 
     <div class="mainBody">
+        <div class="portfolioContainer">
+            <div class="portfolioTop">
+                <h1>Portfolio</h1>
+            </div>
+            <div class="portfolioBottom">
+                <div class="portfolioLeft">
+                    <h2>Graduation Photos</h2>
+                    <div class="portfolioGrid">
+
+                    </div>
+                </div>
+                <div class="portfolioRight">
+                    <h2>Wedding Photos</h2>
+                    <div class="portfolioGrid">
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
 
