removed unesesary pages and began revamping with color scheme

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -30,7 +30,27 @@
                 <div class="portfolioLeft">
                     <h2>Graduation Photos</h2>
                     <div class="portfolioGrid">
-
+                        <div class="item1">
+                            <img src="../images/pexels-anand-raj-2880979.jpg" alt="">
+                        </div>
+                        <div class="item2">
+                            <img src="../images/pexels-godisable-jacob-901964.jpg" alt="">
+                        </div>
+                        <div class="item3">
+                            <img src="../images/pexels-martin-kirigua-2259997.jpg" alt="">
+                        </div>
+                        <div class="item4">
+                            <img src="../images/pexels-moaid-mefleh-1036626.jpg" alt="">
+                        </div>
+                        <div class="item5">
+                            <img src="../images/pexels-nappy-935948.jpg" alt="">
+                        </div>
+                        <div class="item6">
+                            <img src="../images/pexels-stanley-morales-3186386.jpg" alt="">
+                        </div>
+                        <div class="item7">
+                            <img src="../images/pexels-tam-hoang-1007066.jpg" alt="">
+                        </div>
                     </div>
                 </div>
                 <div class="portfolioRight">
