--- a/pages/contact.html
+++ b/pages/contact.html
@@ -15,8 +15,8 @@
             <a href="./about.html"><img src="../images/id-badge-regular.svg" alt="">About</a>
             <a href="./contact.html"><img src="../images/address-card-solid.svg" alt="">Contact</a>
             <a href="./blog.html"><img src="../images/microblog.svg" alt="">Blog</a>
-            <a href="./merch.html"><img src="../images/toolbox-solid.svg" alt="">Merch</a>
-            <a href=""><img src="../images/box-open-solid.svg" alt="">Portfolio</a>
+            <!-- <a href="./merch.html"><img src="../images/toolbox-solid.svg" alt="">Merch</a> -->
+            <!-- <a href=""><img src="../images/box-open-solid.svg" alt="">Portfolio</a> -->
             <a href=""><button>Request A Quote</button></a>
         </div>
     </div>
@@ -85,10 +85,10 @@
                 <a href="./about.html">About</a>
             </div>
             <div class="item5">
-                <a href="./merch.html">Merch</a>
+                <!-- <a href="./merch.html">Merch</a> -->
             </div>
             <div class="item6">
-                <a href="">Portfolio</a>
+                <!-- <a href="">Portfolio</a> -->
             </div>
             <div class="item7">
                 <a href="">Community Events</a>
