--- a/pages/contact.html
+++ b/pages/contact.html
@@ -66,7 +66,7 @@
                 </div>
             </div>
             <div class="profileRight">
-                <img src="./images/pexels-rafael-barros-1728163.jpg" alt="">
+                <img src="../images/pexels-rafael-barros-1728163.jpg" alt="">
             </div>
         </div>
         <div class="footerGrid">
